@@ -4,7 +4,8 @@ import java.util.LinkedList;
 import java.util.List;
 
 /**
- * Created by Zong on 2016/8/10.
+ * 内存泄漏
+ * -Xms20m -Xmx20m -XX:+PrintGC -XX:+HeapDumpOnOutOfMemoryError  -XX:HeapDumpPath=heap.bin
  */
 public class GC {
     public static void main(String[] args) {
